<resources>
    <string name="app_name">Mini Tumblr</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="msg_content_not_available">Content not available</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_profile">Profile</string>
    <string name="txt_notes">%1$s notes</string>
    <string name="txt_logout">Log out</string>
    <string name="txt_bd_backup">BD backup</string>
    <string name="msg_no_posts">No posts available to show</string>
    <string name="lbl_follow">Follow</string>

    <string name="lbl_login">Log in</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_password">Password</string>
    <string name="txt_legal_terms">I accept the <a href="#">terms and conditions</a></string>
    <string name="lbl_enter">LOG IN</string>
    <string name="lbl_forget_password">Forgot your password?</string>
</resources>
