<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorInfoBackground">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginStart="@dimen/space_main"
        android:layout_marginEnd="@dimen/space_main"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:text="@string/lbl_login"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:textColor="@android:color/holo_red_light"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_large"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_main"
                android:layout_marginEnd="@dimen/space_main"
                android:layout_marginTop="60dp"
                android:inputType="text"
                android:hint="@string/lbl_username"
                android:drawableStart="@drawable/ic_person_black_24dp"
                style="@style/AppTheme.EditText"
                android:drawableTint="@color/colorAccent"
                android:maxLength="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/lbl_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                style="@style/AppTheme.EditText"
                android:drawableTint="@color/colorAccent"
                android:maxLength="8"
                app:layout_constraintEnd_toEndOf="@+id/edt_username"
                app:layout_constraintStart_toStartOf="@+id/edt_username"
                app:layout_constraintTop_toBottomOf="@+id/edt_username" />

            <CheckBox
                android:id="@+id/cb_legal_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/AppTheme.Checkbox"
                app:layout_constraintStart_toStartOf="@+id/edt_password"
                app:layout_constraintTop_toBottomOf="@+id/edt_password"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tv_legal_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_legal_terms"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toEndOf="@+id/cb_legal_terms"
                app:layout_constraintTop_toTopOf="@+id/cb_legal_terms"
                app:layout_constraintBottom_toBottomOf="@+id/cb_legal_terms"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_main"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/space_main"
                style="@style/AppTheme.Button"
                android:background="@drawable/general_selector"
                android:text="@string/lbl_enter"
                android:textSize="@dimen/text_medium"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_legal_terms" />

            <TextView
                android:id="@+id/tv_forgotten_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="@dimen/space_main"
                android:text="@string/lbl_forget_password"
                android:textSize="13sp"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_fuel_background" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_vehicle_background" /-->

</androidx.constraintlayout.widget.ConstraintLayout>